Tentative de correction des tests WIT après re-branchement sur l'environnement RCPers d'intégration
git-svn-id: https://svn.etat-de-vaud.ch/SVN_SOCLE/registre/unireg/trunk@115226 cb3efa0a-b8b0-9f43-a4c8-343d8b7e4362